# msde-cli

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  local_authorized_tokens.json
.cargo/: config.toml
.github/workflows/: release.yml
asd/certs/cfssl/: ca.csr
asd/certs/kibana/: kibana.key
asd/filebeat/: filebeat.yml
asd/pgadmin/: pgpass
docker/: docker-compose-base.yml
package/: README.md  docker-compose-bot.yml  docker-compose-metrics.yml  docker-compose-otel.yml  docker-compose.yml
package/certs/ca/: ca.crt
package/certs/cfssl/: cert.pem
package/certs/kibana/: kibana.crt
package/docker/: .env  docker-compose-web3.yml  docker-compose.yml
package/docker/certs/: README.txt
package/docker/certs/ca/: ca.key
package/docker/certs/cfssl/: ca-key.pem  ca.pem  cert-key.pem  cert.csr
package/docker/certs/es01/: es01.crt  es01.key
package/docker/elasticmq/: elasticmq.conf
package/docker/grafana/: game-stats-dashboard.json
package/docker/otel/: otel-collector-config.yaml
package/docker/pgadmin/: servers.json
package/docker/prometheus/: prometheus.yml
package/grafana/: Dockerfile.grafana  init.sh  profiling-dashboard.json
package/riak/: 02-bootstrap-datatypes.sh  Dockerfile.Riak
src/: central_service.rs  cli.rs  compose.rs  env.rs  game.rs  hooks.rs  init.rs  lib.rs  local_auth.rs  main.rs  parsing.rs  updater.rs  utils.rs
template/: local_config.yml
template/scripts/: game.exs
template/scripts/portal/: editor_commands.json  portalHandler.exs
template/tuning/: DynamicOption1.json  DynamicOption2.json  DynamicOption3.json  DynamicOption4.json  DynamicOption5.json  DynamicOption6.json  default.json  merigo_validator.exs  player.json  sample.csv
template/tuning/bots/: buffs.csv  classes.csv  damage_types.csv  default.json  info.json  large_classes.json  pg_bank.json  shields.csv  swords.csv
wix/: main.wxs
