[package]
name = "msde-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for running the Merigo Dev package."

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
sysinfo = "0.29.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
docker-api = "0.14"
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.9.5"
futures = "0.3.28"
anyhow = "1.0.75"
secrecy = { version = "0.8.0", features = ["serde"] }
semver = "1.0.19"
reqwest = { version = "0.11.20", features = ["serde_json", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["serde"] }
raw-cpuid = "11.0.1"

[package.metadata.bundle]
name = "MSDE-CLI"
identifier = "msde.cli"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
copyright = "Copyright (c) Merigo Inc 2023. All rights reserved."
category = "Developer Tool"
short_description = "CLI tool for running the Merigo Dev package."
long_description = """
CLI tool for running the Merigo Dev package.
"""
osx_frameworks = ["SDL2"]
