[package]
name = "msde-cli"
version = "0.13.0"
edition = "2021"
description = "CLI tool for running the Merigo Dev package."
repository = "https://github.com/ptrskay3/msde-cli"
homepage = "https://github.com/ptrskay3/msde-cli"
authors = ["Merigo Team"]

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
sysinfo = "0.30.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
docker-api = "0.14"
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.9.5"
futures = "0.3.28"
anyhow = "1.0.75"
secrecy = { version = "0.8.0", features = ["serde"] }
semver = "1.0.19"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false } # Maybe `native-tls-vendored`?
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["serde"] }
raw-cpuid = "11.0.1"
md-5 = "0.10.6"
zip = "1.1.1"
zip-extensions = "0.6"
fs_extra = "1.3.0"
home = "0.5.9"
clap_complete = "4.5.2"
# TODO: Use it to open stuff when it's ready.
webbrowser = "1.0.0"
flate2 = "1.0"
tar = "0.4"
dialoguer = "0.11.0"
console = "0.15.8"
indicatif = { version = "0.17.8", features = ["tokio"] }
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
flate2 = "1.0"
tar = "0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.0"
# The installers to generate for each app
installers = ["shell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = "github"
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "Ptrskay3/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
# TODO: add these if we're ready to publish from the real Merigo account
# github-releases-repo = "merigo-co/cli"
# source-tarball = false

[package.metadata.bundle]
name = "MSDE-CLI"
identifier = "msde.cli"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
copyright = "Copyright (c) Merigo Inc 2024. All rights reserved."
category = "Developer Tool"
short_description = "CLI tool for running the Merigo Dev package."
long_description = """
CLI tool for running the Merigo Dev package.
"""
osx_frameworks = ["SDL2"]

[package.metadata.wix]
upgrade-guid = "88E9817A-22F6-45F8-9257-FCD20FAE5E88"
path-guid = "67B68274-A125-4D30-8744-B2D32589F7A7"
license = false
eula = false
